# uav_landing_sim

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  accuracy.csv  package.xml  requirements.txt  setup.py  time.csv
config/: trajectory_builder.yaml  uwb_simulator.yaml
config/drone/: drone_fsm.yaml  landing_controller.yaml
config/positioning/: aruco_estimator.yaml  aruco_positioning.yaml  infra_optical_estimator.yaml  uwb_lqr_vanc_estimator.yaml  uwb_positioning.yaml
config/sensor_sim/: infra_optical_simulator.yaml  uwb_simulator.yaml
config/ugv/: ugv_control.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
launch/: mp_uav_landing_sim.launch  singe_uwb_anchor_spawn.launch  trajectory_builder.launch
launch/drone/: drone_fsm.launch  landing_controller.launch
launch/positioning/: aruco_estimator.launch  aruco_positioning.launch  infra_optical_estimator.launch  uwb_lqr_vanc_estimator.launch  uwb_positioning.launch
launch/sensor_sim/: infra_optical_simulator.launch  uwb_simulator.launch
launch/spawners/: spawn_husky.launch
launch/ugv/: ugv_control.launch
models/uwb_anchor/: model.config  model.sdf
msg/: UWBRange.msg
scripts/: dr_cohtrol_test.py  trajectory_builder.py  uwb_positioning.py
scripts/drone/: drone_fsm.py  landing_controller.py
scripts/positioning/: aruco_estimator.py  aruco_positioning.py  infra_optical_estimator.py  uwb_lqr_vanc_estimator.py
scripts/sensor_sim/: infra_optical_simulator.py  uwb_simulator.py
scripts/ugv/: ugv_control.py
src/drone/: control.py
src/env_disturbances/: env_disturbances.py  image_disturbances.py
src/positioning/: aruco.py  uwb_lqr_vanc.py
src/uwb_interpolation/: rmse_interpolation.py
uav_landing_sim/: CMakeLists.txt  README.md  package.xml  requirements.txt
uav_landing_sim/launch/: uav_landing_sim.launch
uav_landing_sim/msg/: Intensity.msg
uav_landing_sim/worlds/: sim.world  sim_windy.world
worlds/: sim.world  sim_windy.world
(+34 files in other folders)
